// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiText is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 emotion-euiText-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props color & align 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 emotion-euiText-m-euiTextColor-danger-euiTextAlign-center"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props grow false 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 emotion-euiText-constrainedWidth-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props style 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 emotion-euiText-m-euiTextColor-customColor"
  data-test-subj="test subject string"
  style="background-color:#000;color:#fff"
>
  <p>
    Content
  </p>
</div>
`;
